tests/build/cases/property/invalid_priority.stderr
error[E0599]: no function or associated item named `invalid` found for struct `NestGroup` in the current scope
 --> cases/property/invalid_priority.rs:3:12
  |
3 | #[property(invalid)]
  |            ^^^^^^^ function or associated item not found in `NestGroup`
